pkg/front_end/testcases/inference/lambda_return_type.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

typedef FunctionReturningNum = () → core::num;
static method test() → dynamic {
  core::int i = 1;
  core::Object o = 1;
  () → core::num a = () → core::int => i;
  () → core::num b = let final dynamic #t1 = () → core::Object => o in let dynamic _ = null in const core::_ConstantExpressionError::•().{core::_ConstantExpressionError::_throw}(new core::_CompileTimeError::•("pkg/front_end/testcases/inference/lambda_return_type.dart:14:51: Error: The function expression type '() \u8594 dart.core::Object' isn't of expected type '() \u8594 dart.core::num'.\nChange the type of the function expression or the context in which it is used.\n  FunctionReturningNum b = /*@returnType=Object*/ () => o;\n                                                  ^"));
  () → core::num c = () → core::int {
    return i;
  };
  () → core::num d = () → core::num {
    return o as{TypeError} core::num;
  };
}
static method main() → dynamic {}
